aagregue el footer

--- a/index.html
+++ b/index.html
@@ -67,23 +67,22 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis, voluptate?</p>
         </div>
     </div>
-    <div class="footer">
-        <img src="img/pexels-pixabay-45201.jpg" alt="is a cat">
-        <div class="menu">
-            <ul>
-                <li><a href="#top">Inicio</a></li>
-                <li><a href="#bio">Autobiografia</a></li>
-                <li><a href="#essay">Ensayos</a></li>
-                <li><a href="#contact">Contacto</a></li>
-
-            </ul>
-
-
-
-            </ul>
+    <footer>
+        <div class="social-media">
+            <img src="img/face.svg" alt="facebook-logo">
+            <img src="img/i.svg" alt="instagram-logo">
+            <img src="img/g.svg" alt="gmail-logo">
         </div>
-    </div>
-
+        <div class="footer-list">
+            <a href="#about-us">Autobiografía</a>
+            <a href="#essays">Ensayos</a>
+            <a href="#aboutme">Sobre mí</a>
+            <a href="#">Contacto</a>
+        </div>
+        <div class="derechos">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, fugiat.</p>
+        </div>
+    </footer>
     <script type="text/javascript" src="javascript/nav.js"></script>
 </body>
 
