--- a/autobio.html
+++ b/autobio.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autobiografía</title>
+    <title>Autobiografía </title>
     <link rel="stylesheet" href="estilos/bio.css">
 </head>
+
 <body>
+
     <header class="header">
         <div class="logo">
-            <img src="img/pexels-pixabay-45201.jpg" alt="me">
+            <a href="index.html"><img src="img/pexels-pixabay-45201.jpg" alt="me"></a>
         </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="autobio.html">Autobiografía</a></li>
-                <li><a href="#essays">Ensayos</a></li>
-                <li><a href="#aboutme">Sobre mí</a></li>
+                <li><a href="essays.html">Ensayos</a></li>
+                <li><a href="aboutme.html">Sobre mí</a></li>
             </ul>
         </nav>
-        <a href="#contact" class="btn"><button>Contacto</button></a>
+        <a href="contact.html" class="btn"><button>Contacto</button></a>
         <a onclick="openNav()" class="menu" href="#"><button>Menu</button></a>
 
         <div id="mobile-menu" class="overlay">
             <a onclick="closeNav()" href="" class="close">&times;</a>
             <div class="overlay-content">
                 <a href="autobio.html">Autobiografía</a>
-                <a href="#essays">Ensayos</a>
-                <a href="#aboutme">Sobre mí</a>
-                <a href="#">Contacto</a>
+                <a href="essays.html">Ensayos</a>
+                <a href="aboutme.html">Sobre mí</a>
+                <a href="contact.html">Contacto</a>
             </div>
         </div>
     </header>
-    <section class="texto">
+     <section class="texto">
         <div class="container">
             <h1>Autobiografía</h1>
             <p>
@@ -47,15 +50,14 @@
     </section>
     <footer>
         <div class="social-media">
-            <img src="img/face.svg" alt="facebook-logo">
-            <img src="img/i.svg" alt="instagram-logo">
-            <img src="img/g.svg" alt="gmail-logo">
+            <a href="https://www.facebook.com/profile.php?id=100058374175419"><img src="img/face.svg" alt="facebook-logo"></a>
+            <a href="https://www.instagram.com/"><img src="img/i.svg" alt="instagram-logo"></a>
         </div>
         <div class="footer-list">
             <a href="autobio.html">Autobiografía</a>
-            <a href="#essays">Ensayos</a>
-            <a href="#aboutme">Sobre mí</a>
-            <a href="#">Contacto</a>
+            <a href="essays.html">Ensayos</a>
+            <a href="aboutme.html">Sobre mí</a>
+            <a href="contact.html">Contacto</a>
         </div>
         <div class="derechos">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, fugiat.</p>
