--- a/autobio.html
+++ b/autobio.html
@@ -1,65 +1,105 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Autobiografía</title>
+    <link rel="stylesheet" href="estilos/bio.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autobiografía </title>
-    <link rel="stylesheet" href="estilos/bio.css">
-</head>
-
-<body>
-
+  <body>
     <header class="header">
-        <div class="logo">
-            <a href="index.html"><img src="img/pexels-pixabay-45201.jpg" alt="me"></a>
-        </div>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="autobio.html">Autobiografía</a></li>
-                <li><a href="essays.html">Ensayos</a></li>
-            </ul>
-        </nav>
-        <a href="contact.html" class="btn"><button>Contacto</button></a>
-        <a onclick="openNav()" class="menu" href="#"><button>Menu</button></a>
+      <div class="logo">
+        <a href="index.html"
+          ><img src="img/pexels-pixabay-45201.jpg" alt="me"
+        /></a>
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="autobio.html">Autobiografía</a></li>
+          <li><a href="essays.html">Articulos</a></li>
+        </ul>
+      </nav>
+      <a href="contact.html" class="btn"><button>Contacto</button></a>
+      <a onclick="openNav()" class="menu" href="#"><button>Menu</button></a>
 
-        <div id="mobile-menu" class="overlay">
-            <a onclick="closeNav()" href="" class="close">&times;</a>
-            <div class="overlay-content">
-                <a href="autobio.html">Autobiografía</a>
-                <a href="essays.html">Ensayos</a>
-                <a href="contact.html">Contacto</a>
-            </div>
+      <div id="mobile-menu" class="overlay">
+        <a onclick="closeNav()" href="" class="close">&times;</a>
+        <div class="overlay-content">
+          <a href="autobio.html">Autobiografía</a>
+          <a href="essays.html">Articulos</a>
+          <a href="contact.html">Contacto</a>
         </div>
+      </div>
     </header>
-     <section class="texto">
-        <div class="container">
-            <h1>Autobiografía</h1>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum autem est ad, soluta modi necessitatibus repellat laboriosam tempora culpa distinctio minima labore doloribus nesciunt deserunt ducimus vero consequuntur non deleniti natus. Officia animi iste, nihil excepturi et numquam reiciendis veritatis iusto. Delectus, sapiente assumenda iusto error provident sit tenetur temporibus quia, mollitia praesentium culpa excepturi quae facilis facere tempore voluptas id aut voluptates! Aliquam debitis quod blanditiis hic dicta temporibus recusandae libero cupiditate, veritatis nobis ratione? Doloribus unde libero ullam fuga corporis debitis non aliquid aperiam molestiae velit provident repellendus voluptate expedita sint saepe accusamus minima, fugit deserunt quae labore!
-            </p>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum autem est ad, soluta modi necessitatibus repellat laboriosam tempora culpa distinctio minima labore doloribus nesciunt deserunt ducimus vero consequuntur non deleniti natus. Officia animi iste, nihil excepturi et numquam reiciendis veritatis iusto. Delectus, sapiente assumenda iusto error provident sit tenetur temporibus quia, mollitia praesentium culpa excepturi quae facilis facere tempore voluptas id aut voluptates! Aliquam debitis quod blanditiis hic dicta temporibus recusandae libero cupiditate, veritatis nobis ratione? Doloribus unde libero ullam fuga corporis debitis non aliquid aperiam molestiae velit provident repellendus voluptate expedita sint saepe accusamus minima, fugit deserunt quae labore!
-            </p>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum autem est ad, soluta modi necessitatibus repellat laboriosam tempora culpa distinctio minima labore doloribus nesciunt deserunt ducimus vero consequuntur non deleniti natus. Officia animi iste, nihil excepturi et numquam reiciendis veritatis iusto. Delectus, sapiente assumenda iusto error provident sit tenetur temporibus quia, mollitia praesentium culpa excepturi quae facilis facere tempore voluptas id aut voluptates! Aliquam debitis quod blanditiis hic dicta temporibus recusandae libero cupiditate, veritatis nobis ratione? Doloribus unde libero ullam fuga corporis debitis non aliquid aperiam molestiae velit provident repellendus voluptate expedita sint saepe accusamus minima, fugit deserunt quae labore!
-            </p>
-        </div>
+    <section class="texto">
+      <div class="container">
+        <h1>Autobiografía</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum
+          autem est ad, soluta modi necessitatibus repellat laboriosam tempora
+          culpa distinctio minima labore doloribus nesciunt deserunt ducimus
+          vero consequuntur non deleniti natus. Officia animi iste, nihil
+          excepturi et numquam reiciendis veritatis iusto. Delectus, sapiente
+          assumenda iusto error provident sit tenetur temporibus quia, mollitia
+          praesentium culpa excepturi quae facilis facere tempore voluptas id
+          aut voluptates! Aliquam debitis quod blanditiis hic dicta temporibus
+          recusandae libero cupiditate, veritatis nobis ratione? Doloribus unde
+          libero ullam fuga corporis debitis non aliquid aperiam molestiae velit
+          provident repellendus voluptate expedita sint saepe accusamus minima,
+          fugit deserunt quae labore!
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum
+          autem est ad, soluta modi necessitatibus repellat laboriosam tempora
+          culpa distinctio minima labore doloribus nesciunt deserunt ducimus
+          vero consequuntur non deleniti natus. Officia animi iste, nihil
+          excepturi et numquam reiciendis veritatis iusto. Delectus, sapiente
+          assumenda iusto error provident sit tenetur temporibus quia, mollitia
+          praesentium culpa excepturi quae facilis facere tempore voluptas id
+          aut voluptates! Aliquam debitis quod blanditiis hic dicta temporibus
+          recusandae libero cupiditate, veritatis nobis ratione? Doloribus unde
+          libero ullam fuga corporis debitis non aliquid aperiam molestiae velit
+          provident repellendus voluptate expedita sint saepe accusamus minima,
+          fugit deserunt quae labore!
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum
+          autem est ad, soluta modi necessitatibus repellat laboriosam tempora
+          culpa distinctio minima labore doloribus nesciunt deserunt ducimus
+          vero consequuntur non deleniti natus. Officia animi iste, nihil
+          excepturi et numquam reiciendis veritatis iusto. Delectus, sapiente
+          assumenda iusto error provident sit tenetur temporibus quia, mollitia
+          praesentium culpa excepturi quae facilis facere tempore voluptas id
+          aut voluptates! Aliquam debitis quod blanditiis hic dicta temporibus
+          recusandae libero cupiditate, veritatis nobis ratione? Doloribus unde
+          libero ullam fuga corporis debitis non aliquid aperiam molestiae velit
+          provident repellendus voluptate expedita sint saepe accusamus minima,
+          fugit deserunt quae labore!
+        </p>
+      </div>
     </section>
     <footer>
-        <div class="social-media">
-            <a href="https://www.facebook.com/profile.php?id=100058374175419"><img src="img/face.svg" alt="facebook-logo"></a>
-            <a href="https://www.instagram.com/"><img src="img/i.svg" alt="instagram-logo"></a>
-        </div>
-        <div class="footer-list">
-            <a href="autobio.html">Autobiografía</a>
-            <a href="essays.html">Ensayos</a>
-            <a href="contact.html">Contacto</a>
-        </div>
-        <div class="derechos">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, fugiat.</p>
-        </div>
+      <div class="social-media">
+        <a href="https://www.facebook.com/profile.php?id=100058374175419"
+          ><img src="img/face.svg" alt="facebook-logo"
+        /></a>
+        <a href="https://www.instagram.com/"
+          ><img src="img/i.svg" alt="instagram-logo"
+        /></a>
+      </div>
+      <div class="footer-list">
+        <a href="autobio.html">Autobiografía</a>
+        <a href="essays.html">Articulos</a>
+        <a href="contact.html">Contacto</a>
+      </div>
+      <div class="derechos">
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius,
+          fugiat.
+        </p>
+      </div>
     </footer>
     <script type="text/javascript" src="javascript/nav.js"></script>
-</body>
+  </body>
 </html>
