--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <ul class="nav-links">
           <li><a href="autobio.html">Autobiografía</a></li>
-          <li><a href="essays.html">Ensayos</a></li>
+          <li><a href="essays.html">Articulos</a></li>
         </ul>
       </nav>
       <a href="contact.html" class="btn"><button>Contacto</button></a>
@@ -27,7 +27,7 @@
         <a onclick="closeNav()" href="" class="close">&times;</a>
         <div class="overlay-content">
           <a href="autobio.html">Autobiografía</a>
-          <a href="essays.html">Ensayos</a>
+          <a href="essays.html">Articulos</a>
           <a href="contact.html">Contacto</a>
         </div>
       </div>
@@ -104,7 +104,7 @@
       </div>
       <div class="footer-list">
         <a href="autobio.html">Autobiografía</a>
-        <a href="essays.html">Ensayos</a>
+        <a href="essays.html">Articulos</a>
         <a href="contact.html">Contacto</a>
       </div>
       <div class="derechos">
