--- a/contact.html
+++ b/contact.html
@@ -1,68 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
-    <link rel="stylesheet" href="estilos/contact.css">
-</head>
+    <link rel="stylesheet" href="estilos/contacto.css" />
+  </head>
 
-<body>
-
+  <body>
     <header class="header">
-        <div class="logo">
-            <a href="index.html"><img src="img/pexels-pixabay-45201.jpg" alt="me"></a>
-        </div>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="autobio.html">Autobiografía</a></li>
-                <li><a href="essays.html">Ensayos</a></li>
-            </ul>
-        </nav>
-        <a href="contact.html" class="btn"><button>Contacto</button></a>
-        <a onclick="openNav()" class="menu" href="#"><button>Menu</button></a>
+      <div class="logo">
+        <a href="index.html"
+          ><img src="img/pexels-pixabay-45201.jpg" alt="me"
+        /></a>
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="autobio.html">Autobiografía</a></li>
+          <li><a href="essays.html">Articulos</a></li>
+        </ul>
+      </nav>
+      <a href="contact.html" class="btn"><button>Contacto</button></a>
+      <a onclick="openNav()" class="menu" href="#"><button>Menu</button></a>
 
-        <div id="mobile-menu" class="overlay">
-            <a onclick="closeNav()" href="" class="close">&times;</a>
-            <div class="overlay-content">
-                <a href="autobio.html">Autobiografía</a>
-                <a href="essays.html">Ensayos</a>
-                <a href="contact.html">Contacto</a>
-            </div>
+      <div id="mobile-menu" class="overlay">
+        <a onclick="closeNav()" href="" class="close">&times;</a>
+        <div class="overlay-content">
+          <a href="autobio.html">Autobiografía</a>
+          <a href="essays.html">Articulos</a>
+          <a href="contact.html">Contacto</a>
         </div>
+      </div>
     </header>
     <section>
-        <div class="container">
-            <div class="hola">
-                <h1>Contacto</h1>
-                <h3>Correo Electrónico</h3><hr>
-                <p>esteesunejemplo@gmail.com</p><hr>
-                <h3>Número de telefono</h3><hr>
-                <p>45-4545-7887</p>
-            </div>
-            <div class="cv">
-                    <p>aqui va el cv</p>
-            </div>
+      <div class="container">
+        <div class="hola">
+          <h1>Contacto</h1>
+          <h3>Correo Electrónico</h3>
+          <hr />
+          <p>esteesunejemplo@gmail.com</p>
+          <hr />
+          <h3>Número de telefono</h3>
+          <hr />
+          <p>45-4545-7887</p>
         </div>
-        
-        
+        <div class="cv">
+          <p>aqui va el cv</p>
+        </div>
+      </div>
     </section>
 
     <footer>
-        <div class="social-media">
-            <a href="https://www.facebook.com/profile.php?id=100058374175419"><img src="img/face.svg" alt="facebook-logo"></a>
-            <a href="https://www.instagram.com/"><img src="img/i.svg" alt="instagram-logo"></a>
-        </div>
-        <div class="footer-list">
-            <a href="autobio.html">Autobiografía</a>
-            <a href="essays.html">Ensayos</a>
-            <a href="contact.html">Contacto</a>
-        </div>
-        <div class="derechos">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, fugiat.</p>
-        </div>
+      <div class="social-media">
+        <a href="https://www.facebook.com/profile.php?id=100058374175419"
+          ><img src="img/face.svg" alt="facebook-logo"
+        /></a>
+        <a href="https://www.instagram.com/"
+          ><img src="img/i.svg" alt="instagram-logo"
+        /></a>
+      </div>
+      <div class="footer-list">
+        <a href="autobio.html">Autobiografía</a>
+        <a href="essays.html">Articulos</a>
+        <a href="contact.html">Contacto</a>
+      </div>
+      <div class="derechos">
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius,
+          fugiat.
+        </p>
+      </div>
     </footer>
     <script type="text/javascript" src="javascript/nav.js"></script>
-</body>
+  </body>
 </html>
