--- a/autobio.html
+++ b/autobio.html
@@ -34,48 +34,18 @@
     </header>
     <section class="texto">
       <div class="container">
-        <h1>Autobiografía</h1>
+        <h3>Sobre mi</h3>
+        <hr />
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum
-          autem est ad, soluta modi necessitatibus repellat laboriosam tempora
-          culpa distinctio minima labore doloribus nesciunt deserunt ducimus
-          vero consequuntur non deleniti natus. Officia animi iste, nihil
-          excepturi et numquam reiciendis veritatis iusto. Delectus, sapiente
-          assumenda iusto error provident sit tenetur temporibus quia, mollitia
-          praesentium culpa excepturi quae facilis facere tempore voluptas id
-          aut voluptates! Aliquam debitis quod blanditiis hic dicta temporibus
-          recusandae libero cupiditate, veritatis nobis ratione? Doloribus unde
-          libero ullam fuga corporis debitis non aliquid aperiam molestiae velit
-          provident repellendus voluptate expedita sint saepe accusamus minima,
-          fugit deserunt quae labore!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum
-          autem est ad, soluta modi necessitatibus repellat laboriosam tempora
-          culpa distinctio minima labore doloribus nesciunt deserunt ducimus
-          vero consequuntur non deleniti natus. Officia animi iste, nihil
-          excepturi et numquam reiciendis veritatis iusto. Delectus, sapiente
-          assumenda iusto error provident sit tenetur temporibus quia, mollitia
-          praesentium culpa excepturi quae facilis facere tempore voluptas id
-          aut voluptates! Aliquam debitis quod blanditiis hic dicta temporibus
-          recusandae libero cupiditate, veritatis nobis ratione? Doloribus unde
-          libero ullam fuga corporis debitis non aliquid aperiam molestiae velit
-          provident repellendus voluptate expedita sint saepe accusamus minima,
-          fugit deserunt quae labore!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum
-          autem est ad, soluta modi necessitatibus repellat laboriosam tempora
-          culpa distinctio minima labore doloribus nesciunt deserunt ducimus
-          vero consequuntur non deleniti natus. Officia animi iste, nihil
-          excepturi et numquam reiciendis veritatis iusto. Delectus, sapiente
-          assumenda iusto error provident sit tenetur temporibus quia, mollitia
-          praesentium culpa excepturi quae facilis facere tempore voluptas id
-          aut voluptates! Aliquam debitis quod blanditiis hic dicta temporibus
-          recusandae libero cupiditate, veritatis nobis ratione? Doloribus unde
-          libero ullam fuga corporis debitis non aliquid aperiam molestiae velit
-          provident repellendus voluptate expedita sint saepe accusamus minima,
-          fugit deserunt quae labore!
+          Internacionalista en formación por la Facultad de Ciencias Políticas y
+          Sociales de la UNAM. Mi trabajo se centra en el análisis del orden
+          internacional contemporáneo, con especial interés en geopolítica
+          europea, seguridad internacional y derechos humanos. He complementado
+          mi formación con estudios en la Comisión Nacional de los Derechos
+          Humanos en mediación, resolución pacífica de controversias y educación
+          para la paz. En este espacio comparto artículos y ensayos sobre
+          Europa, Rusia y las transformaciones del sistema internacional,
+          explorando la relación entre poder, soberanía y normas globales.
         </p>
       </div>
     </section>
