--- a/contact.html
+++ b/contact.html
@@ -38,11 +38,11 @@
           <h1>Contacto</h1>
           <h3>Correo Electrónico</h3>
           <hr />
-          <p>esteesunejemplo@gmail.com</p>
+          <p>elisarodriguezcu@gmail.com</p>
           <hr />
-          <h3>Número de telefono</h3>
+          <h3>LinkedIn</h3>
           <hr />
-          <p>45-4545-7887</p>
+          <p>elisa-rodriguezcu</p>
         </div>
         <div class="cv">
           <p>aqui va el cv</p>
