--- a/essays.html
+++ b/essays.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ensayos</title>
+    <title>Articulos</title>
     <link rel="stylesheet" href="estilos/art.css" />
   </head>
 
@@ -37,7 +37,7 @@
       </div>
       <div class="container">
         <div class="hijo">
-          <a href="ensayos/one.html">
+          <a href="./art/resultado.pdf">
             <img src="./img/dolares.jpg" alt="Dollars" />
             <h3>BLABLABLABLALBLA</h3>
             <p>
@@ -50,7 +50,7 @@
         </div>
         <div class="hijo">
           <img src="img/1.jpg" alt="imagen-uno" />
-          <a href="/ensayos/two.html">
+          <a href="art/africaOccidental.pdf">
             <h3>Fragmentación y Poder</h3>
           </a>
           <p>
@@ -60,7 +60,7 @@
         </div>
         <div class="hijo">
           <img src="img/2.jpg" alt="imagen-dos" />
-          <a href="ensayos/three.html">
+          <a href="art/juridico.pdf">
             <h3>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Non alias
               repudiandae modi sit aspernatur. Porro.
@@ -84,7 +84,7 @@
         </div>
         <div class="hijo">
           <img src="img/3.jpg" alt="imagen-tres" />
-          <a href="ensayos/four.html">
+          <a href="art/reforma.pdf">
             <h3>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
               quo?
@@ -102,7 +102,7 @@
         </div>
         <div class="hijo">
           <img src="img/4.jpg" alt="imagen-cuadro" />
-          <a href="ensayos/five.html">
+          <a href="./art/5.pdf">
             <h3>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
               ducimus mollitia consectetur eum quo nostrum!
