--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Travesías y Conexiones Históricas</title>
+    <title>Forum Multipolar</title>
     <link rel="stylesheet" href="estilos/style.css" />
   </head>
 
@@ -84,7 +84,7 @@
       <div class="hijos">
         <img src="img/4.jpg" alt="es la img uno" />
         <a href="./art/5.pdf">
-          <h2>la humanitaria</h2>
+          <h2>Ala humanitaria</h2>
         </a>
 
         <p>
