--- a/contact.html
+++ b/contact.html
@@ -8,69 +8,62 @@
   </head>
 
   <body>
-    <header class="header">
-      <div class="logo">
-        <a href="index.html"
-          ><img src="img/pexels-pixabay-45201.jpg" alt="me"
-        /></a>
-      </div>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="autobio.html">Autobiografía</a></li>
-          <li><a href="essays.html">Articulos</a></li>
-        </ul>
-      </nav>
-      <a href="contact.html" class="btn"><button>Contacto</button></a>
-      <a onclick="openNav()" class="menu" href="#"><button>Menu</button></a>
+    <div id="navbar-placeholder"></div>
 
-      <div id="mobile-menu" class="overlay">
-        <a onclick="closeNav()" href="" class="close">&times;</a>
-        <div class="overlay-content">
-          <a href="autobio.html">Autobiografía</a>
-          <a href="essays.html">Articulos</a>
-          <a href="contact.html">Contacto</a>
-        </div>
-      </div>
-    </header>
-    <section>
-      <div class="container">
-        <div class="hola">
+    <section class="contacto-section">
+      <div class="contacto-container">
+        <div class="info-contacto">
           <h1>Contacto</h1>
-          <h3>Correo Electrónico</h3>
-          <hr />
-          <p>elisarodriguezcu@gmail.com</p>
-          <hr />
-          <h3>LinkedIn</h3>
-          <hr />
-          <p>elisa-rodriguezcu</p>
+          <div class="linea-azul"></div>
+
+          <div class="dato">
+            <h3>Correo Electrónico</h3>
+            <p>
+              <a href="mailto:elisarodriguezcu@gmail.com"
+                >elisarodriguezcu@gmail.com</a
+              >
+            </p>
+          </div>
+
+          <div class="dato">
+            <h3>LinkedIn</h3>
+            <p>
+              <a
+                href="https://linkedin.com/in/elisa-rodriguezcu"
+                target="_blank"
+                >elisa-rodriguezcu</a
+              >
+            </p>
+          </div>
         </div>
-        <div class="cv">
-          <p>aqui va el cv</p>
+
+        <div class="cv-box">
+          <div class="cv-icon">📄</div>
+          <h3>Curriculum Vitae</h3>
+          <p>Consulta mi trayectoria académica y profesional.</p>
+          <a href="./art/CV.pdf" class="btn-cv" download>Descargar CV</a>
         </div>
       </div>
     </section>
 
-    <footer>
-      <div class="social-media">
-        <a href="https://www.facebook.com/profile.php?id=100058374175419"
-          ><img src="img/face.svg" alt="facebook-logo"
-        /></a>
-        <a href="https://www.instagram.com/"
-          ><img src="img/i.svg" alt="instagram-logo"
-        /></a>
-      </div>
-      <div class="footer-list">
-        <a href="autobio.html">Autobiografía</a>
-        <a href="essays.html">Articulos</a>
-        <a href="contact.html">Contacto</a>
-      </div>
-      <div class="derechos">
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius,
-          fugiat.
-        </p>
-      </div>
-    </footer>
+    <div id="footer-placeholder"></div>
+    <script>
+      function incluirHTML(id, ruta) {
+        fetch(ruta)
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error("ERROR AL CARGAR LA RUTA" + ruta);
+            }
+            return response.text();
+          })
+          .then((data) => {
+            document.getElementById(id).innerHTML = data;
+          })
+          .catch((err) => console.error(err));
+      }
+      incluirHTML("navbar-placeholder", "components/nav.html");
+      incluirHTML("footer-placeholder", "components/footer.html");
+    </script>
     <script type="text/javascript" src="javascript/nav.js"></script>
   </body>
 </html>
